--- a/views/login.ejs
+++ b/views/login.ejs
@@ -46,6 +46,13 @@
               Remember me
             </label>
           </div>
+          <% if(messages.length > 0) { %>
+            <div class="alert alert-success" role="alert">
+                <% for(var i=0; i < messages.length; i++) { %>
+                  <li><%= messages[i] %></li>
+                <% } %>
+            </div>
+          <% } %>
           <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
         </form>
       </main>
