--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -33,33 +33,34 @@
           <h1 class="h3 mb-3 fw-normal">Sign Up</h1>
 
           <div class="form-floating my-2">
-            <input type="text" class="form-control" name="username" placeholder="Enter your username">
+            <input type="text" class="form-control" name="username" placeholder="Enter your username" required>
             <label for="username">Username</label>
           </div>
       
           <div class="form-floating my-2">
-            <input type="email" class="form-control" name="email" placeholder="name@example.com">
+            <input type="email" class="form-control" name="email" placeholder="name@example.com" required>
             <label for="floatingInput">Email address</label>
           </div>
 
           <div class="form-floating my-2">
-            <input type="password" class="form-control" name="password" placeholder="Password">
+            <input type="password" class="form-control" name="password" placeholder="Password" required>
             <label for="Password">Password</label>
           </div>
 
           <div class="form-floating my-2">
-            <input type="password" class="form-control" name="confirm_password" placeholder="Confirm Password">
+            <input type="password" class="form-control" name="confirm_password" placeholder="Confirm Password" required>
             <label for="confirmPassword">Confirm Password</label>
           </div>
-          
-          <button class="btn btn-primary w-100 py-2" type="submit">Sign Up</button>
+
           <% if(messages.length > 0) { %>
             <div class="alert alert-danger" role="alert">
                 <% for(var i=0; i < messages.length; i++) { %>
-                  <li><%= messages[i] %></li>
+                  <%= messages[i] %>
                 <% } %>
             </div>
           <% } %>
+
+          <button class="btn btn-primary w-100 py-2" type="submit">Sign Up</button>
         </form>
       </main>
 
