--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -52,13 +52,20 @@
             <label for="confirmPassword">Confirm Password</label>
           </div>
 
-          <% if(messages.length > 0) { %>
+          <% if(messages.length > 0 && messages.length < 2 ) { %>
             <div class="alert alert-danger" role="alert">
-                <% for(var i=0; i < messages.length; i++) { %>
-                  <%= messages[i] %>
-                <% } %>
+              <% for(var i=0; i < messages.length; i++) { %>
+                <%= messages[i] %>
+              <% } %>
             </div>
-          <% } %>
+          <% } else if (messages.length === 25) { %>
+              <div class="alert alert-success" role="alert">
+                <% for(var i=0; i < 1; i++) { %>
+                  <%= "User created successfully" %>
+                <% } %>
+              </div>
+            <% } %>
+          
 
           <button class="btn btn-primary w-100 py-2" type="submit">Sign Up</button>
         </form>
