--- a/views/login.ejs
+++ b/views/login.ejs
@@ -24,7 +24,7 @@
 
 
       <main class="form-signin w-100 m-auto">
-        <form>
+        <form method="post" action="/loginUser">
         <div class="h3 mb-3 fw-normal">
             <button type="button" class="btn btn-primary">Login</button>
             <a type="button" class="btn btn-outline-primary me-2"  a href="/signup">Sign-up</a></button>
@@ -32,11 +32,11 @@
           <h1 class="h3 mb-3 fw-normal">Please Login in</h1>
       
           <div class="form-floating my-2">
-            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-            <label for="floatingInput">Email address</label>
+            <input type="text" class="form-control" name="username" placeholder="Username" required>
+            <label for="floatingInput">Username</label>
           </div>
           <div class="form-floating my-2">
-            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+            <input type="password" class="form-control" name="password" placeholder="Password" required>
             <label for="floatingPassword">Password</label>
           </div>
       
@@ -46,13 +46,21 @@
               Remember me
             </label>
           </div>
-          <% if(messages.length > 0) { %>
-            <div class="alert alert-success" role="alert">
-                <% for(var i=0; i < messages.length; i++) { %>
-                  <li><%= messages[i] %></li>
-                <% } %>
+
+          <% if(messages.length> 0 && messages.length < 2 ) { %>
+            <div class="alert alert-danger" role="alert">
+              <% for(var i=0; i < messages.length; i++) { %>
+                <%= messages[i] %>
+                  <% } %>
             </div>
-          <% } %>
+            <% } else if (messages.length > 2) { %>
+              <div class="alert alert-success" role="alert">
+                <% for(var i=0; i < 1; i++) { %>
+                  <%= "Login successfuly" %>
+                    <% } %>
+              </div>
+              <% } %>
+
           <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
         </form>
       </main>
