--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,82 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sign-up</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <!-- Custom Login & Register CSS -->
-    <link rel="stylesheet" href="css/style.css">
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sign-up</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+  <!-- Custom Login & Register CSS -->
+  <link rel="stylesheet" href="css/style.css">
 </head>
-  <body>
 
-    <div class="container">
-        <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-          <div class="col-md-3 mb-2 mb-md-0">
-            <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
-                Create an account 
-            </a>
-        </header>
+<body>
+
+  <div class="container">
+    <header
+      class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+      <div class="col-md-3 mb-2 mb-md-0">
+        <a href="/" class="d-inline-flex link-body-emphasis text-decoration-none">
+          Create an account
+        </a>
+    </header>
+  </div>
+
+
+  <main class="form-signin w-100 m-auto">
+    <form action="/registerUser" method="POST">
+
+      <div class="h3 mb-3 fw-normal">
+        <a type="button" class="btn btn-outline-primary me-2" a href="login">Login</a></button>
+        <a type="button" class="btn btn-primary" a href="signup">Sign-up</a></button>
       </div>
 
+      <h1 class="h3 mb-3 fw-normal">Sign Up</h1>
 
-      <main class="form-signin w-100 m-auto">
-        <form action="/registerUser" method="POST">
+      <div class="form-floating my-2">
+        <input type="text" class="form-control" name="username" placeholder="Enter your username" required>
+        <label for="username">Username</label>
+      </div>
 
-          <div class="h3 mb-3 fw-normal">
-            <a type="button" class="btn btn-outline-primary me-2"  a href="login">Login</a></button>
-            <a type="button" class="btn btn-primary" a href="signup">Sign-up</a></button>
-          </div>
+      <div class="form-floating my-2">
+        <input type="email" class="form-control" name="email" placeholder="name@example.com" required>
+        <label for="floatingInput">Email address</label>
+      </div>
 
-          <h1 class="h3 mb-3 fw-normal">Sign Up</h1>
+      <div class="form-floating my-2">
+        <input type="password" class="form-control" name="password" placeholder="Password" required>
+        <label for="Password">Password</label>
+      </div>
 
-          <div class="form-floating my-2">
-            <input type="text" class="form-control" name="username" placeholder="Enter your username" required>
-            <label for="username">Username</label>
-          </div>
-      
-          <div class="form-floating my-2">
-            <input type="email" class="form-control" name="email" placeholder="name@example.com" required>
-            <label for="floatingInput">Email address</label>
-          </div>
+      <div class="form-floating my-2">
+        <input type="password" class="form-control" name="confirm_password" placeholder="Confirm Password" required>
+        <label for="confirmPassword">Confirm Password</label>
+      </div>
 
-          <div class="form-floating my-2">
-            <input type="password" class="form-control" name="password" placeholder="Password" required>
-            <label for="Password">Password</label>
-          </div>
-
-          <div class="form-floating my-2">
-            <input type="password" class="form-control" name="confirm_password" placeholder="Confirm Password" required>
-            <label for="confirmPassword">Confirm Password</label>
-          </div>
-
-          <% if(messages.length > 0 && messages.length < 2 ) { %>
-            <div class="alert alert-danger" role="alert">
-              <% for(var i=0; i < messages.length; i++) { %>
-                <%= messages[i] %>
-              <% } %>
-            </div>
-          <% } else if (messages.length === 25) { %>
-              <div class="alert alert-success" role="alert">
-                <% for(var i=0; i < 1; i++) { %>
-                  <%= "User created successfully" %>
+      <% if(messages.length> 0 && messages.length < 2 ) { %>
+          <div class="alert alert-danger" role="alert">
+            <% for(var i=0; i < messages.length; i++) { %>
+              <%= messages[i] %>
                 <% } %>
-              </div>
+          </div>
+          <% } else if (messages.length > 2) { %>
+            <div class="alert alert-success" role="alert">
+              <% for(var i=0; i < 1; i++) { %>
+                <%= "User created successfully" %>
+                  <% } %>
+            </div>
             <% } %>
-          
 
-          <button class="btn btn-primary w-100 py-2" type="submit">Sign Up</button>
-        </form>
-      </main>
 
-      <div class="container">
-        <footer class="text-center py-3 my-4 border-top">
-            <span class="mb-3 mb-md-0 text-body-secondary">© 1975 Company, Inc</span>
-        </footer>
-      </div>
+              <button class="btn btn-primary w-100 py-2" type="submit">Sign Up</button>
+    </form>
+  </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-  </body>
+  <div class="container">
+    <footer class="text-center py-3 my-4 border-top">
+      <span class="mb-3 mb-md-0 text-body-secondary">© 1975 Company, Inc</span>
+    </footer>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
