Board and comments

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -80,7 +80,7 @@
               <%= post.post_create %>
             </div>
             <h3>
-              <a href="/show_post/<%= post.id %>"><%= post.topic %></a>
+              <a href="/show_post/<%= post.id %>" style="color: white;"><%= post.topic %></a>
             </h3>
             <% }) %>
         </li>
