--- a/views/show_post.ejs
+++ b/views/show_post.ejs
@@ -15,34 +15,57 @@
 <body>
     <nav class="sidebar">
         <a class="logo">Menu</a>
-
+    
         <div class="menu-content">
-            <ul class="menu-items">
-                <li class="item">
-                    <a href="/">
-                        <c class="fa-solid fa-house"></c>หน้าหลัก
-                    </a>
-                </li>
-                <li class="item">
-                    <a href="/post_board">
-                        <c class="fa-solid fa-pen-to-square"></c>สร้างกระทู้
-                    </a>
-                </li>
-
-                <li class="item">
-                    <a href="/my_board">
-                        <c class="fa-solid fa-clipboard-user"></c>กระทู้ของฉัน
-                    </a>
-                </li>
-
-                <li class="item">
-                    <a href="#">
-                        <c class="fa-solid fa-ranking-star"></c>ประวัติการโพสต์
-                    </a>
-                </li>
-            </ul>
+          <ul class="menu-items">
+            <li class="item">
+              <a href="/">
+                <c class="fa-solid fa-house"></c>หน้าหลัก
+              </a>
+            </li>
+            <li class="item">
+              <a href="/post_board">
+                <c class="fa-solid fa-pen-to-square"></c>สร้างกระทู้
+              </a>
+            </li>
+    
+            <li class="item">
+              <a href="/my_board">
+                <c class="fa-solid fa-clipboard-user"></c>กระทู้ของฉัน
+              </a>
+            </li>
+    
+            <li class="item">
+              <a href="#">
+                <c class="fa-solid fa-ranking-star"></c>ประวัติการโพสต์
+              </a>
+            </li>
+          </ul>
         </div>
-    </nav>
+      </nav>
+      <nav class="navbar">
+        <i class="fa-solid fa-bars" id="sidebar-close"></i>
+        <strong style="font-size: 31px;position: static;">Board</strong>
+        <div class="search-box">
+          <form action="" class="search-form">
+            <input type="text" name="search" id="srch" placeholder="Search" class="search-input">
+            <button type="submit" class="search-button"><i class="fa fa-search"></i></button>
+          </form>
+        </div>
+        <div class="user-info">
+          <i class="fa-solid fa-user"></i>
+        <% if (user) { %>
+          <span><%= user.username %></span>
+          <a href="/logout">ออกจากระบบ</a>
+          <% } else { %>
+            <span>Guest</span>
+            <% } %>
+          
+          
+    
+        </div>
+        <a style="font-size:14px;color: aliceblue;" href="/login">เข้าสู่ระบบ/สมัครสมาชิก</a>
+      </nav>
     <nav class="navbar">
         <i class="fa-solid fa-bars" id="sidebar-close"></i>
         <strong style="font-size: 31px;position: static;">Board</strong>
