--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -4,8 +4,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <title> Responsiive Admin Dashboard | CodingLab </title>
-  <link rel="stylesheet" href="../css/amin_panel.css">
+  <title> AdminConsole </title>
+  <link rel="stylesheet" href="../css/admin_style.css">
   <!-- Boxicons CDN Link -->
   <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -44,24 +44,24 @@
         <i class='bx bx-search'></i>
       </div>
       <div class="profile-details">
-        <img src="images/profile.jpg" alt="">
+        <img src="../images/chef.png" alt="">
         <span class="admin_name">Prem Shahi</span>
         <i class='bx bx-chevron-down'></i>
       </div>
     </nav>
 
     <div class="home-content">
-      <div class="sales-boxes">
-        <div class="recent-sales box">
-          <div class="title">Recent Sales</div>
-          <div class="sales-details">
+      <div class="lish-boxes">
+        <div class="recent-lish box">
+          <div class="title">User Management</div>
+          <div class="lish-details">
             <div class="header_wrap">
             </div>
             <table class="table table-striped table-class" id="table-id">
               <thead>
                 <tr>
                   <th>#</th>
-                  <th>Photo</th>
+                  <th>Profile</th>
                   <th>Name</th>
                   <th>Email</th>
                   <th>Password</th>
@@ -71,15 +71,17 @@
               <tbody>
                 <tr>
                   <td>1</td>
-                  <td></td>
+                  <td>
+                    <img src="../images/chef.png" alt="ผู้ใช้งาน">
+                  </td>
                   <td>Toby</td>
                   <td>nt@mi.co.uk</td>
                   <td>13666</td>
                   <td>
                     <div class="button">
-                      <a href="#">View</a>
-                      <a href="#">Edit</a>
-                      <a class="Edit" href="#">Delete</a>
+                      <a class="view" href="#">View</a>&nbsp
+                      <a class="edit" href="#">Edit</a>&nbsp
+                      <a class="delete" href="#">Delete</a>
                     </div>
                   </td>
                 </tr>
@@ -87,12 +89,18 @@
 
                 <tr>
                   <td>2</td>
-                  <td></td>
+                  <td>
+                    <img src="../images/chef.png" alt="ผู้ใช้งาน">
+                  </td>
                   <td>Anna</td>
                   <td>erat@veum.ca</td>
                   <td>8180</td>
                   <td>
-  
+                    <div class="button">
+                      <a class="view" href="#">View</a>&nbsp
+                      <a class="edit" href="#">Edit</a>&nbsp
+                      <a class="delete" href="#">Delete</a>
+                    </div>
                   </td>
                 </tr>
 
