--- a/views/my_board.ejs
+++ b/views/my_board.ejs
@@ -55,41 +55,49 @@
 
         <div class="user-info">
             <i class="fa-solid fa-user"></i>
-          <% if (user) { %>
-            <a style="font-size:14px;color: aliceblue;" href="/profile"><%= user.username %></a>
-            <a style="font-size:14px;color: aliceblue;" href="/logout">ออกจากระบบ</a>
-            <% } else { %>
-              <span>Guest</span>
-              <a style="font-size:14px;color: aliceblue;" href="/login">เข้าสู่ระบบ</a>
-              <a style="font-size:14px;color: aliceblue;">/</a>
-              <a style="font-size:14px;color: aliceblue;" href="/signup">สมัครสมาชิก</a>
-              <% } %>
-          </div>
+            <% if (user) { %>
+                <a style="font-size:14px;color: aliceblue;" href="/profile">
+                    <%= user.username %>
+                </a>
+                <a style="font-size:14px;color: aliceblue;" href="/logout">ออกจากระบบ</a>
+                <% } else { %>
+                    <span>Guest</span>
+                    <a style="font-size:14px;color: aliceblue;" href="/login">เข้าสู่ระบบ</a>
+                    <a style="font-size:14px;color: aliceblue;">/</a>
+                    <a style="font-size:14px;color: aliceblue;" href="/signup">สมัครสมาชิก</a>
+                    <% } %>
+        </div>
 
     </nav>
     <main class="main">
-        <% Posts.forEach(function(post) { %>
-            <% if (post.Users_uid===user.uid) { %>
-                <section class="my-board">
-                    <h1>My Board</h1>
-                    <ul>
-                        <li>
-                            <div class="my-board-date">
-                            </div>
-                            <h1>
-                                <%= post.topic %>
-                            </h1>
-                            <p>Sample content 1</p>
-                            <div class="my-board-buttons">
-                                <button class="edit-button">Edit</button>
-                                <button class="remove-button">Remove</button>
-                            </div>
-                        </li>
-                    </ul>
-                </section>
+            <% Posts.forEach(function(post) { %>
+                <% if (post.Users_uid===user.uid) { %>
+
+                    <section class="my-board">
+                        <h1>My Board</h1>
+                        <ul>
+                            <li>
+                                <div class="my-board-date">
+                                </div>
+                                <h1>
+                                    <%= post.topic %>
+                                </h1>
+                                <p>Sample content 1</p>
+                                <form method="post" action="/edit_post">
+                                <input type="hidden" name="post_id" value="<%= post.id %>">
+                                <input type="hidden" name="post_Users_uid" value="<%= post.Users_uid %>">
+                                <div class="my-board-buttons">
+                                    <button class="edit-button" type="submit">Edit</button>
+                                    <button class="remove-button" type="submit" formaction="/delete_post">Remove</button>
+                                </div>
+                                </form>
+                            </li>
+                        </ul>
+                    </section>
+
                 <% } %>
-                    <% }) %>
-                        </section>
+             <% }) %>
+        </form>
     </main>
 
     <script src="script.js"></script> //slide bar affect
