retemplat 80% and fix bug edit del

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
   <title>Dev man cry</title>
   <!-- <link rel='stylesheet' type='text/css' href='css/index.css' /> -->
   <link rel="icon" type="image/x-icon" href='images/icon.png' />
-  <link rel="stylesheet" href="../css/index_new.css">
+  <link rel="stylesheet" href="../css/index_style.css">
 
   <!-- Fontawesome CDN Link -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -31,13 +31,13 @@
         </a>
       </li>
       <li>
-        <a href="/post_board" class="active">
+        <a href="/post_board">
           <i class="bi bi-pencil-square"></i>
           <span class="links_name"></c> สร้างกระทู้</span>
         </a>
       </li>
       <li>
-        <a href="/my_board" class="active">
+        <a href="/my_board">
           <i class="bi bi-archive"></i>
           <span class="links_name"></c> กระทู้ของฉัน</span>
         </a>
@@ -55,7 +55,7 @@
     <nav>
       <div class="sidebar-button">
         <i class='bx bx-menu sidebarBtn'></i>
-        <!-- <span class="dashboard">Dashboard</span> -->
+        <span class="dashboard">Board</span>
       </div>
       <div class="search-box">
         <input type="text" placeholder="Search...">
