--- a/views/my_board.ejs
+++ b/views/my_board.ejs
@@ -1,106 +1,133 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebBoard_กระทู้ของฉัน</title>
-    <link rel="stylesheet" href="css/my_board.css" />
-    <link rel="stylesheet" href="css/index.css" />
-    <!-- Fontawesome CDN Link -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
+  <meta charset="UTF-8">
+  <title> WebBoard </title>
+  <link rel="stylesheet" href="../css/myboard_style.css">
+  <!-- CDN -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+  <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
-    <nav class="sidebar">
-        <a class="logo">Menu</a>
+  <div class="sidebar">
+    <div class="logo-details">
+      <i class="bi bi-globe"></i>
+      <span class="logo_name">Menu</span>
+    </div>
+    <ul class="nav-links">
+      <li>
+        <a href="/">
+          <i class="bi bi-house"></i>
+          <span class="links_name"></c> หน้าหลัก</span>
+        </a>
+      </li>
+      <li>
+        <a href="/post_board">
+          <i class="bi bi-pencil-square"></i>
+          <span class="links_name"></c> สร้างกระทู้</span>
+        </a>
+      </li>
+      <li>
+        <a href="/my_board" class="active">
+          <i class="bi bi-archive"></i>
+          <span class="links_name"></c> กระทู้ของฉัน</span>
+        </a>
+      </li>
+      <li class="log_out">
+        <a href="/logout">
+          <i class='bx bx-log-out'></i>
+          <span class="links_name">Log out</span>
+        </a>
+      </li>
+    </ul>
+  </div>
 
-        <div class="menu-content">
-            <ul class="menu-items">
-                <li class="item">
-                    <a href="/">
-                        <c class="fa-solid fa-house"></c>หน้าหลัก
-                    </a>
-                </li>
-                <li class="item">
-                    <a href="/post_board">
-                        <c class="fa-solid fa-pen-to-square"></c>สร้างกระทู้
-                    </a>
-                </li>
-
-                <li class="item">
-                    <a href="/my_board">
-                        <c class="fa-solid fa-clipboard-user"></c>กระทู้ของฉัน
-                    </a>
-                </li>
-
-                <li class="item">
-                    <a href="#">
-                        <c class="fa-solid fa-ranking-star"></c>ประวัติการโพสต์
-                    </a>
-                </li>
-            </ul>
-        </div>
+  <section class="home-section">
+    <nav>
+      <div class="sidebar-button">
+        <i class='bx bx-menu sidebarBtn'></i>
+        <span class="dashboard">Board</span>
+      </div>
+      <div class="search-box">
+        <input type="text" placeholder="Search...">
+        <i class='bx bx-search'></i>
+      </div>
+      <div class="profile-details">
+        <% if (user) { %>
+          <img src="../images/chef.png" alt="">
+          <span class="admin_name">
+            <%= user.username %>
+          </span>
+          <!-- <a href="/logout">ออกจากระบบ</a> -->
+          <% } else { %>
+            <!-- <span>Guest</span> -->
+            <a href="/login">เข้าสู่ระบบ</a>
+            &emsp;
+            <a href="/signup">สมัครสมาชิก</a>
+            <% } %>
+      </div>
     </nav>
-    <nav class="navbar">
-        <i class="fa-solid fa-bars" id="sidebar-close"></i>
-        <strong style="font-size: 31px;position: static;">Board</strong>
-        <div class="search-box">
-            <form action="" class="search-form">
-                <input type="text" name="search" id="srch" placeholder="Search" class="search-input">
-                <button type="submit" class="search-button"><i class="fa fa-search"></i></button>
-            </form>
-        </div>
 
-        <div class="user-info">
-            <i class="fa-solid fa-user"></i>
-            <% if (user) { %>
-                <a style="font-size:14px;color: aliceblue;" href="/profile">
-                    <%= user.username %>
-                </a>
-                <a style="font-size:14px;color: aliceblue;" href="/logout">ออกจากระบบ</a>
-                <% } else { %>
-                    <span>Guest</span>
-                    <a style="font-size:14px;color: aliceblue;" href="/login">เข้าสู่ระบบ</a>
-                    <a style="font-size:14px;color: aliceblue;">/</a>
-                    <a style="font-size:14px;color: aliceblue;" href="/signup">สมัครสมาชิก</a>
+    <div class="home-content">
+      <div class="lish-boxes">
+        <div class="recent-lish box">
+          <div class="title">
+            <h1>My Board</h1>
+          </div>
+          <div class="lish-details">
+            <div class="header_wrap">
+            </div>
+            <div class="my-board-date"></div>
+            <ul>
+              <table>
+                <thead>
+                  <tr>
+                    <th>Topic</th>
+                    <th>Action</th>
+                  </tr>
+                  <% for (const post of Posts) { %>
+                    <% if (post.Users_uid === user.uid) { %>
+                      <% console.log(post) %>
+                      <tbody>
+                        <td>
+                          <p><%= post.topic %></p>
+                        </td>
+                        <td>
+                          <form action="/edit_post" method="post">
+                            <input type="hidden" name="post_id" value="<%= post.id %>">
+                            <input type="hidden" name="post_Users_uid" value="<%= post.Users_uid %>">
+                            <div>
+                              <button class="edit-button" type="submit">Edit</button>
+                              <button class="remove-button" type="submit" formaction="/delete_post">Remove</button>
+                            </div>
+                          </form>
+                        </td>
+                      </tbody>
                     <% } %>
+                  <% } %>
+              </table>
+            </ul>
+          </div>
         </div>
+      </div>
+  </section>
 
-    </nav>
-    <main class="main">
-            <% Posts.forEach(function(post) { %>
-                <% if (post.Users_uid===user.uid) { %>
+  <script>
+    let sidebar = document.querySelector(".sidebar");
+    let sidebarBtn = document.querySelector(".sidebarBtn");
+    sidebarBtn.onclick = function () {
+      sidebar.classList.toggle("active");
+      if (sidebar.classList.contains("active")) {
+        sidebarBtn.classList.replace("bx-menu", "bx-menu-alt-right");
+      } else
+        sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
+    }
+  </script>
 
-                    <section class="my-board">
-                        <h1>My Board</h1>
-                        <ul>
-                            <li>
-                                <div class="my-board-date">
-                                </div>
-                                <h1>
-                                    <%= post.topic %>
-                                </h1>
-                                <p>Sample content 1</p>
-                                <form method="post" action="/edit_post">
-                                <input type="hidden" name="post_id" value="<%= post.id %>">
-                                <input type="hidden" name="post_Users_uid" value="<%= post.Users_uid %>">
-                                <div class="my-board-buttons">
-                                    <button class="edit-button" type="submit">Edit</button>
-                                    <button class="remove-button" type="submit" formaction="/delete_post">Remove</button>
-                                </div>
-                                </form>
-                            </li>
-                        </ul>
-                    </section>
-
-                <% } %>
-             <% }) %>
-        </form>
-    </main>
-
-    <script src="script.js"></script> //slide bar affect
 </body>
 
 </html>
