--- a/views/post_board.ejs
+++ b/views/post_board.ejs
@@ -1,95 +1,125 @@
 <!DOCTYPE html>
-<html lang="th">
+<html lang="en">
 
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Dev man cry</title>
+  <!-- <link rel='stylesheet' type='text/css' href='css/index.css' /> -->
+  <link rel="icon" type="image/x-icon" href='images/icon.png' />
+  <link rel="stylesheet" href="../css/post_board_style.css">
+
+  <!-- Fontawesome CDN Link -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+  <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WebBoard_สร้างกระทู้</title>
-  <link rel="stylesheet" href="css/post_board.css">
-  <link rel="stylesheet" href="css/index.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
 </head>
 
 <body>
-  <nav class="sidebar">
-    <a class="logo">Menu</a>
-
-    <div class="menu-content">
-      <ul class="menu-items">
-        <li class="item">
-          <a href="/">
-            <c class="fa-solid fa-house"></c>หน้าหลัก
-          </a>
-        </li>
-        <li class="item">
-          <a href="/post_board">
-            <c class="fa-solid fa-pen-to-square"></c>สร้างกระทู้
-          </a>
-        </li>
-
-        <li class="item">
-          <a href="/my_board">
-            <c class="fa-solid fa-clipboard-user"></c>กระทู้ของฉัน
-          </a>
-        </li>
-
-        <li class="item">
-          <a href="#">
-            <c class="fa-solid fa-ranking-star"></c>ประวัติการโพสต์
-          </a>
-        </li>
-      </ul>
+  <div class="sidebar">
+    <div class="logo-details">
+      <i class="bi bi-globe"></i>
+      <span class="logo_name">Menu</span>
     </div>
-  </nav>
-  <nav class="navbar">
-    <i class="fa-solid fa-bars" id="sidebar-close"></i>
-    <strong style="font-size: 31px;position: static;">Board</strong>
-    <div class="search-box">
-      <form action="" class="search-form">
-        <input type="text" name="search" id="srch" placeholder="Search" class="search-input">
-        <button type="submit" class="search-button"><i class="fa fa-search"></i></button>
-      </form>
-    </div>
-    
-      <div class="user-info">
-        <i class="fa-solid fa-user"></i>
-      <% if (user) { %>
-        <a style="font-size:14px;color: aliceblue;" href="/profile"><%= user.username %></a>
-        <a style="font-size:14px;color: aliceblue;" href="/logout">ออกจากระบบ</a>
-        <% } else { %>
-          <span>Guest</span>
-          <a style="font-size:14px;color: aliceblue;" href="/login">เข้าสู่ระบบ</a>
-          <a style="font-size:14px;color: aliceblue;">/</a>
-          <a style="font-size:14px;color: aliceblue;" href="/signup">สมัครสมาชิก</a>
-          <% } %>
+    <ul class="nav-links">
+      <li>
+        <a href="/">
+          <i class="bi bi-house"></i>
+          <span class="links_name"></c> หน้าหลัก</span>
+        </a>
+      </li>
+      <li>
+        <a href="/post_board" class="active">
+          <i class='bi bi-pencil-square'></i>
+          <span class="links_name">สร้างกระทู้</span>
+        </a>
+      </li>
+      <li>
+        <a href="/my_board">
+          <i class='bi bi-archive'></i>
+          <span class="links_name">กระทู้ของฉัน</span>
+        </a>
+      </li>
+      <li class="log_out">
+        <a href="/logout">
+          <i class='bx bx-log-out'></i>
+          <span class="links_name">Log out</span>
+        </a>
+      </li>
+    </ul>
+  </div>
+
+  <section class="home-section">
+    <nav>
+      <div class="sidebar-button">
+        <i class='bx bx-menu sidebarBtn'></i>
+        <span class="dashboard">Board</span>
       </div>
-      
-      
-
-    </div>
-  </nav>
-  <main class="main">
-    <form action="/add_new_post" method="post">
-      <div class="post-form">
-        <div class="post-header">
-          <h2>สร้างกระทู้</h2>
-        </div>
-        <div class="post-content">
-          <input type="text" ip="topic"name="topic" style="font-size: 22px;" placeholder="หัวข้อกระทู้" required>
-          <br>
-          <textarea id="details" name="details" placeholder="เนื้อหากระทู้" required></textarea>
-          <br>
-          <label for="post-image">รูปภาพ:</label>
-          <input type="file"name="post_pic" accept="image/png, image/jpeg">
-          <span>
-            <button style="background-color: green;" type="submit" >โพสต์</button>
-            <button style="background-color: red;" type="button" >ยกเลิก</button>
+      <div class="search-box">
+        <input type="text" placeholder="Search...">
+        <i class='bx bx-search'></i>
+      </div>
+      <div class="profile-details">
+        <% if (user) { %>
+          <img src="../images/chef.png" alt="">
+          <span class="admin_name">
+            <%= user.username %>
           </span>
+          <!-- <a href="/logout">ออกจากระบบ</a> -->
+          <% } else { %>
+            <!-- <span>Guest</span> -->
+            <a href="/login">เข้าสู่ระบบ</a>
+            &emsp;
+            <a href="/signup">สมัครสมาชิก</a>
+            <% } %>
+      </div>
+    </nav>
+
+    <div class="home-content">
+      <div class="lish-boxes">
+        <div class="recent-lish box">
+          <div class="title">สร้างกระทู้</div>
+          <div class="lish-details">
+            <div class="header_wrap">
+              <form action="/add_new_post" method="post">
+                <div class="post-form">
+                  <div class="post-header">
+                  <div class="post-content">
+                    <input type="text" ip="topic"name="topic" style="font-size: 20px;" placeholder="หัวข้อกระทู้" required>
+                    <br>
+                    <textarea id="details" name="details" style="font-size: 15px;" placeholder="เนื้อหากระทู้"required></textarea>
+                    <br>
+                    <label for="post-image">รูปภาพ:</label>
+                    <input type="file" id="post-pic" name="post-pic" accept="image/png, image/jpeg">
+                    <span>
+                      <button class="post-button" type="submit">โพสต์</button>
+                      <button class="cancel-button" type="submit" formmethod="get" formaction="/">ยกเลิก</button>
+                    </span>
+                  </div>
+                </div>
+              </div>
+              </form>
+            </div>
+            </form>
+          </div>
         </div>
       </div>
-    </form>
-  </main>
-  <script src="script.js"></script> //slide bar affect
+    </div>
+
+  </section>
+  <script>
+    let sidebar = document.querySelector(".sidebar");
+    let sidebarBtn = document.querySelector(".sidebarBtn");
+    sidebarBtn.onclick = function () {
+      sidebar.classList.toggle("active");
+      if (sidebar.classList.contains("active")) {
+        sidebarBtn.classList.replace("bx-menu", "bx-menu-alt-right");
+      } else
+        sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
+    }
+  </script>
 </body>
 
 </html>
