profile,profile edit done

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,6 +41,11 @@
           <i class="bi bi-archive"></i>
           <span class="links_name"></c> กระทู้ของฉัน</span>
         </a>
+        <li>
+          <a href="/profile">
+            <i class="bi bi-person-circle"></i>
+            <span class="links_name"></c> โปรไฟล์</span>
+          </a>
       </li>
       <li class="log_out">
         <a href="/logout">
