--- a/views/view_user.ejs
+++ b/views/view_user.ejs
@@ -74,7 +74,7 @@
           </div>
           <div class="profile-details">
             <% if (session) { %>
-              <img src="../images/chef.png" alt="">
+              <img src="../images/<%= user.profile_picture %>" alt="">
               <span class="admin_name">
                 <%= session.username %>
               </span>
@@ -141,7 +141,7 @@
               </div>
               <div class="col-lg-6">
                 <div class="about-avatar">
-                  <img src="../images/chef.png" title="" alt="">
+                  <img src="../images/<%= user.profile_picture %>" title="" alt="">
                 </div>
               </div>
               <div class="button">
