--- a/views/edit_profile.ejs
+++ b/views/edit_profile.ejs
@@ -63,7 +63,7 @@
       </div>
       <div class="profile-details">
         <% if (user) { %>
-          <img src="../images/chef.png" alt="">
+          <img src="../images/<%= user.profile_picture %>" alt="">
           <span class="admin_name">
             <%= user.username %>
           </span>
@@ -83,7 +83,7 @@
             <% if (user) { %>
               <div class="col-12 col-sm-auto mb-3">
                 <div class="mx-auto" style="width: 160px;">
-                  <img src="../images/chef.png" width="150" height="150" class="rounded-circle" alt="">
+                  <img src="../images/<%= user.profile_picture %>" width="150" height="150" class="rounded-circle" alt="">
                   <br>
                 </div>
               </div>
@@ -95,9 +95,11 @@
                   <div class="tab-content pt-3">
                     <div class="tab-pane active">
                       <div class="mt-2">
-                        <button class="btn btn-primary edit-profile" type="button">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
-                            class="bi bi-camera" viewBox="0 0 16 16">
+                        <form action="/update_profile" method="post" enctype="multipart/form-data">
+                          <input type="file" name="profile_picture" id="file" accept="image/*"/>
+                          <input type="hidden" name="uid" value="<%= user.uid %>"><br>
+                          <button type="submit" class="btn btn-primary edit-profile">
+                          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-camera" viewBox="0 0 16 16">
                             <path
                               d="M15 12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1h1.172a3 3 0 0 0 2.12-.879l.83-.828A1 1 0 0 1 6.827 3h2.344a1 1 0 0 1 .707.293l.828.828A3 3 0 0 0 12.828 5H14a1 1 0 0 1 1 1zM2 4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2h-1.172a2 2 0 0 1-1.414-.586l-.828-.828A2 2 0 0 0 9.172 2H6.828a2 2 0 0 0-1.414.586l-.828.828A2 2 0 0 1 3.172 4z" />
                             <path
@@ -106,6 +108,7 @@
                           <span>Change Photo</span>
                         </button>
                       </div>
+                    </form>
                       <br>
                       <div class="tab-content pt-3">
                         <div class="tab-pane active">
